# Bosch-Smart-Home-Camera-Tool-Python-frontend

./: .gitignore  .gitleaks.toml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  publish-pypi.yml  secret-scan.yml
docs/: architecture.md  live-webrtc-plan.md  nicegui-3-migration-spike.md
src/bosch_camera_frontend/: __init__.py  app.py
src/bosch_camera_frontend/adapters/: cli_bridge.py  go2rtc_manager.py  nvr_manager.py  stream_session.py
src/bosch_camera_frontend/components/: camera_card.py  hls_player.py  live_player.py  live_snapshot_player.py
src/bosch_camera_frontend/pages/: camera_detail.py  dashboard.py  settings.py
tests/: conftest.py  test_app.py  test_camera_detail_controls.py  test_camera_detail_live.py  test_camera_detail_nvr.py  test_camera_detail_parity_batch.py  test_cli_bridge.py  test_cli_bridge_controls.py  test_cli_bridge_parity_batch.py  test_components.py  test_event_ts_format.py  test_go2rtc_manager.py  test_live_player.py  test_nvr_manager.py  test_pages.py  test_placeholder.py  test_smoke.py  test_stream_session.py
