[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bosch-camera-frontend"
version = "0.1.1a0"
description = "NiceGUI browser frontend for Bosch Smart Home cameras"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "nicegui>=3.12.0,<4",
    "requests>=2.28",
    "urllib3>=1.26",
    # Transitive runtime dep via the CLI bridge (bosch_maintenance -> defusedxml).
    "defusedxml>=0.7.1",
]

[project.scripts]
bosch-camera-frontend = "bosch_camera_frontend.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-mock>=3.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bosch_camera_frontend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Suppress NiceGUI import warnings during tests
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.hatch.metadata]
allow-direct-references = true
