[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bosch-camera-frontend"
version = "0.4.0a0"
description = "NiceGUI browser frontend for Bosch Smart Home cameras"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "nicegui>=3.12.0,<4",
    "requests>=2.28",
    "urllib3>=1.26",
    # Transitive runtime dep via the CLI bridge (bosch_maintenance -> defusedxml).
    "defusedxml>=0.7.1",
    # The CLI ships the bosch_camera module the bridge re-exports. As a real
    # dependency this makes `pip install bosch-camera-frontend` self-contained;
    # a sibling-checkout dev layout still overrides it via BOSCH_CAMERA_CLI_PATH.
    "bosch-smart-home-camera-tool>=10.10.2",
]

[project.scripts]
bosch-camera-frontend = "bosch_camera_frontend.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-mock>=3.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bosch_camera_frontend"]

# Exclusive allowlist — sdist ships exactly these, never a stray bosch_config.json.
[tool.hatch.build.targets.sdist]
only-include = ["src", "tests", "README.md", "LICENSE", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Suppress NiceGUI import warnings during tests
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.hatch.metadata]
allow-direct-references = true

# Mirrors exactly what CI already invokes bare (`ruff check src/ tests/` +
# `ruff format --check src/ tests/`) — pinned explicitly here so a local
# `ruff check`/`ruff format --check` run with no flags can never silently
# diverge from CI's resolved settings (e.g. if a future ruff release changes
# its target-version inference from requires-python).
[tool.ruff]
line-length = 88
target-version = "py310"

# Mirrors `mypy --strict src/bosch_camera_frontend` exactly — kept in sync so
# a bare local `mypy` run resolves the same strict settings as CI.
[tool.mypy]
python_version = "3.10"
files = ["src/bosch_camera_frontend"]
strict = true
